--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./css/style.css"> <!-- css -->
-    <script src="./js/script.js" defer></script> <!--  o defer serve para carregar o js mais tarde -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- css -->
+    <link rel="shortcut icon" href="img/mario-speed.gif" type="image/x-icon" />
+    <!-- Favicon -->
+    <script src="./js/script.js" defer></script>
+    <!--  o defer serve para carregar o js mais tarde -->
 
-    <title>Mario Jump</title>
-</head>
-<body>
+    <title>Mario Jump 🔻</title>
+  </head>
+  <body>
+    <audio src="./midia/mario-song.mp3" autoplay class="audio"></audio>
 
     <div class="game-board">
-        <img src="./img/clouds.png" class="clouds" alt="Imagem de nuvens">
-        <img src="./img/mario-speed.gif" class="mario" alt="Gif do mário e o yoshi correndo">
-        <img src="./img/pipe.png" class="pipe" alt="Imagem do cano">
+      <img
+        src="img/presstostart.png"
+        class="start-game"
+        alt="Pressione para iniciar Mario Jump"
+      />
+
+      <img src="./img/clouds.png" class="clouds" alt="Imagem de nuvens" />
+      <img
+        src="./img/mario-speed.gif"
+        class="mario pause-initial-mario"
+        alt="Gif do mário e o yoshi correndo"
+      />
+      <img
+        src="./img/pipe.png"
+        class="pipe pause-initial-pipe"
+        alt="Imagem do cano"
+      />
     </div>
-    
-</body>
+  </body>
 </html>
